css/style.css
.form-container{
	background:rgba(0,0,0,0.6);
    border: 1px solid #414141;
    border-radius: 5px;
    padding: 10px;
    margin-top: 90px;

}

#bgImg{
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: -1;
}

#ny-times-container, #wiki-container{
	margin-top: 80px;
}

.list-group-item{
	background: rgba(255,255,255,0.6);
}

.list-group a{
	color: #151515;
}

#articles-heading{
	color: rgb(218, 218, 218);
	background: rgba(0, 0, 0, 0.6);
	font-weight: bold;
	font-size: 1.2em;
}

